--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
 ---
 layout: default
 ---
+<div class="home-banner">
+	<div id="main" role="main" class="container">
+ 		<h1>Welcome.</h1>
+ 		
+ 		<blockquote>I'm Devon, a third-year at <a href="http://calpoly.edu">Cal Poly</a>, in San Luis Obispo, California.</blockquote>
+
+ 		<blockquote>There, I major in Computer Science and minor in Economics.</blockquote>
+	</div>
+</div>
+
+<div class="home-banner light-banner">
+	<div id="main" role="main" class="container">
+ 		<h1>Skills</h1>
+ 		<li>Proficient in Java, C, MySQL</li>
+ 		<li>Comfortable with PHP, Python, HTML, CSS, and JavaScript</li>
+ 		<li>Exposure to Agile development</li>
+ 		<li>Comfortable working interpersonally, enjoy collaborative development</li>
+	</div>
+</div>
+
+<div class="home-banner">
+	<div id="main" role="main" class="container">
+ 		<h1 align="center">Resume Basics</h1>
+ 		<p>The full version is <a href="test">available here</a> as a PDF.</p>
+	</div>
+</div>
