Stylistic and homepage updates

--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 ---
 layout: default
 ---
-<div class="home-banner">
+<div class="banner home-banner">
 	<div id="main" role="main" class="container">
  		<h1>Welcome.</h1>
  		
- 		<blockquote>I'm Devon, a third-year at <a href="http://calpoly.edu">Cal Poly</a>, in San Luis Obispo, California.</blockquote>
+ 		<blockquote>I'm Devon, a third-year at Cal Poly in San Luis Obispo, California.</blockquote>
 
- 		<blockquote>There, I major in Computer Science and minor in Economics.</blockquote>
+ 		<blockquote>I major in Computer Science, and minor in Economics.</blockquote>
+
+ 		<blockquote>If I'm not writing code, I'm probably out running.</blockquote>
 	</div>
 </div>
 
-<div class="home-banner light-banner">
+<div class="banner light-banner">
 	<div id="main" role="main" class="container">
  		<h1>Skills</h1>
- 		<li>Proficient in Java, C, MySQL</li>
- 		<li>Comfortable with PHP, Python, HTML, CSS, and JavaScript</li>
- 		<li>Exposure to Agile development</li>
- 		<li>Comfortable working interpersonally, enjoy collaborative development</li>
+ 		<h2>Proficient</h2>
+ 		<div class="row">
+	 		<img src="images/java.png" class="img-skill">
+	 		<img src="images/C.png" class="img-skill">
+	 		<img src="images/mysql.png" class="img-skill">
+ 		</div>
+ 		<h2>Comfortable</h2>
+ 		<div class="row">
+	 		<img src="images/php.png" class="img-skill">
+	 		<img src="images/python.png" class="img-skill">
+	 		<img src="images/html.png" class="img-skill">
+	 		<img src="images/css.png" class="img-skill">
+	 		<img src="images/javascript.png" class="img-skill">
+ 		</div>
+ 		<h2>Other</h2>
+		<div class="row">
+			<ul>
+				<li>Exposure to Agile development in industry environment</li>
+				<li>Experience with web scraping using Python</li>
+			</ul>
+		</div>
 	</div>
 </div>
 
-<div class="home-banner">
+<div class="banner">
 	<div id="main" role="main" class="container">
- 		<h1 align="center">Resume Basics</h1>
- 		<p>The full version is <a href="test">available here</a> as a PDF.</p>
+ 		<h1>Resume</h1>
+ 		<blockquote>The full version is <a href="resume.pdf">available here</a> as a PDF.</blockquote>
+
+ 		<blockquote>Samples of my work can be found by clicking the GitHub link below, I can also be reached through LinkedIn.</blockquote>
 	</div>
 </div>
