Minor css banner improvements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 	</div>
 </div>
 
-<div class="banner light-banner">
+<div class="banner light-banner full-banner">
 	<div id="main" role="main" class="container">
  		<h1>Skills</h1>
  		<h2>Proficient</h2>
