--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
  		<h1>Welcome.</h1> 		
  		<blockquote class="tnsl-flicker">I'm Devon, a third-year at Cal Poly in San Luis Obispo, California.</blockquote>
 
- 		<blockquote class="tnsl-flicker">I study Computer Science, with minor in Economics.</blockquote>
+ 		<blockquote class="tnsl-flicker">I study Computer Science, with a minor in Economics.</blockquote>
 
  		<blockquote class="tnsl-flicker">If I'm not writing code, I'm probably out <a href="http://www.gopoly.com/sports/xc/2016-17/bios/grove_devon_ra5t?view=bio">running</a>.</blockquote>
 	</div>
