Fixed mobile view, other styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@ layout: default
 ---
 
 <div id="main-banner" class="banner home-banner">
-	<div role="main" class="container">
- 		<h1>Welcome.</h1> 		
- 		<blockquote class="tnsl-flicker">I'm Devon, a third-year at Cal Poly in San Luis Obispo, California.</blockquote>
+	<div role="main" class="container"> 
+    <div><h1 class="tnsl-flicker">Hello, I'm Devon.</h1></div>
+    <p>I'm a fourth-year Computer Science student at Cal Poly San Luis Obispo.</p>
 
- 		<blockquote class="tnsl-flicker">I study Computer Science, with a minor in Economics.</blockquote>
-
- 		<blockquote class="tnsl-flicker">If I'm not writing code, I'm probably out <a href="http://www.gopoly.com/sports/xc/2016-17/bios/grove_devon_ra5t?view=bio">running</a>.</blockquote>
+    <p>I also minor in Economics and compete <a href="http://www.gopoly.com/sports/xc/2016-17/bios/grove_devon_ra5t?view=bio">on the track and field team</a>.</p>
 	</div>
 </div>
 
@@ -53,9 +51,6 @@ layout: default
       // initialize page with hacker-looking stuff
       $(document).ready(function() {
         var homeBanner = $('.home-banner');
-        homeBanner.css('background', 'black');
-        homeBanner.css('color', 'green');
-        homeBanner.css('font-family', 'monospace');
 
         tnslInit();
 
