--- a/index.html
+++ b/index.html
@@ -5,42 +5,33 @@ layout: default
 <div id="main-banner" class="banner home-banner">
 	<div role="main" class="container"> 
     <div><h1 class="tnsl-flicker">Hello, I'm Devon.</h1></div>
-    <p>I'm a fourth-year Computer Science student at Cal Poly San Luis Obispo.</p>
-
-    <p>I also minor in Economics and compete <a href="http://www.gopoly.com/sports/xc/2016-17/bios/grove_devon_ra5t?view=bio">on the track and field team</a>.</p>
+    <p>I'm Software Developer and recent graduate of Cal Poly San Luis Obispo.</p>
+    <p>I specialize in backend web development (PHP/Python/Java) with interests in DevOps practices and frontend frameworks as well.</p>
 	</div>
 </div>
 
 <div id="skills-banner" class="banner light-banner full-banner">
+  <h1>Skills</h1>
+
 	<div class="container">
- 		<h1>Skills</h1>
- 		<h2>Proficient</h2>
- 		<div class="row">
-	 		<img src="images/java.png" class="img-skill">
-	 		<img src="images/C.png" class="img-skill">
-	 		<img src="images/mysql.png" class="img-skill">
- 		</div>
- 		<h2>Comfortable</h2>
- 		<div class="row">
-	 		<img src="images/php.png" class="img-skill">
-	 		<img src="images/python.png" class="img-skill">
-	 		<img src="images/html.png" class="img-skill">
-	 		<img src="images/css.png" class="img-skill">
-	 		<img src="images/javascript.png" class="img-skill">
- 		</div>
- 		<h2>Other</h2>
-		<div class="row">
-			<ul>
-				<li>Exposure to Agile development in industry environment</li>
-				<li>Experience with web scraping using Python</li>
-			</ul>
-		</div>
+      <div class="row">
+        <img src="images/php.png" class="img-skill">
+        <img src="images/python.png" class="img-skill">
+        <img src="images/mysql.png" class="img-skill">
+  	 		<img src="images/java.png" class="img-skill">
+  	 		<img src="images/C.png" class="img-skill">
+        <img src="images/html.png" class="img-skill">
+        <img src="images/css.png" class="img-skill">
+      </div>
+      <div class="row">
+          foobar
+      </div>
 	</div>
 </div>
 
 <div id="resume-banner" class="banner">
+  <h1>Resume</h1>
 	<div class="container">
- 		<h1>Resume</h1>
  		<blockquote>The full version is <a href="resume.pdf">available here</a> as a PDF.</blockquote>
 
  		<blockquote>Samples of my work can be found by clicking the GitHub link below, I can also be reached through LinkedIn.</blockquote>
