--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div id="main-banner" class="banner home-banner">
 	<div role="main" class="container"> 
     <div><h1 class="tnsl-flicker">Hello, I'm Devon.</h1></div>
-    <p>I'm Software Developer and recent graduate of Cal Poly San Luis Obispo.</p>
+    <p>I'm a Software Developer and recent graduate of Cal Poly San Luis Obispo.</p>
     <p>I specialize in backend web development (PHP/Python/Java) with interests in DevOps practices and frontend frameworks as well.</p>
 	</div>
 </div>
