Added blog post and misc minor stuff

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: minimal
 title: "Blog"
 permalink: /blog/index.html
 image: '/assets/img/series.png'
-description: ""
+description: "Opinions on this site are my own, and come with no guarantee of being valid nor important."
 ---
 
 {% for tag in site.categories %}
