Updated resume which was 2 yr out of date

--- a/about.html
+++ b/about.html
@@ -9,10 +9,15 @@ description: "and what I like to do..."
 
 <h2>About Me</h2>
 <p>
-	I’m a recent graduate of Cal Poly, San Luis Obispo. Most recently, I worked
-	for Cal Poly’s Information Technology Services department on the Web Content
-	Management Systems team. We used Drupal CMS and associated PHP modules to
-	service nearly all of Cal Poly’s static subdomains.
+	I'm Devon, and I'm currently a Software Engineer at Apptio. I graduated from 
+	Cal Poly, San Luis Obispo in December 2018 with a B.S. in Computer Science. I
+	also ran track and field and cross country at Cal Poly from
+	<a href="https://calpoly.prestosports.com/sports/track/2016-17/bios/grove_devon_p64t?view=bio">2014-2017</a>.
+</p>
+
+<p>
+	When I'm not writing code, I love traveling to as many places as possible, running, skiing, playing guitar,
+	playing chess, and all things Chelsea FC.
 </p>
 
 <h3>Development</h3>
@@ -24,43 +29,10 @@ description: "and what I like to do..."
 	deploying them soon.
 
 <p>
-	I'm really passionate about developing beautiful software, and I love learning about
+	I'm passionate about developing beautiful software, and I love learning about
 	best practices that come along with each tool--though I still have lots to learn.
 	This passion has given me interest in DevOps tools and procedures that keep the build
 	process as simple as possible for devs. I’ve lead a project to integrate Docker into
 	my team’s workflow, and have aspirations to learn about Jenkins/Chef and other elements 
 	of the CI/CD pipeline.
 </p>
-
-<h3>Hobbies</h3>
-<p>
-	When I'm not writing code, I love running (<a href="https://www.gopoly.com/sports/xc/2017-18/bios/grove_devon_lrx4?view=bio">I ran for Cal Poly SLO from 2014-2017</a>),
-	playing guitar/making music, chess, reading, and FIFA.
-</p>
-
-
-<h2>Skills</h2>
-
-<ul class="skill-list">
-	<b>Stuff I know well:</b>
-	<li>PHP</li>
-	<li>Python</li>
-	<li>MySQL</li>
-	<li>Git</li>
-	<li>Agile Dev - Kanban</li>
-	<li>Docker</li>
-	<li>Web Scraping</li>
-	<b>Stuff I've used in projects before, but know less well:</b>
-	<li>AWS: EC2, S3, Lambda, RDS, API Gateway, </li>
-	<li>HTML - CSS - Bootstrap</li>
-	<li>C</li>
-	<li>Angular</li>
-	<li>Firebase - NoSQL</li>
-	<li>Selenium</li>
-</ul>
-
-<h2>Projects</h2>
-
-<ul>
-	<li><a href="https://github.com/djgrove/lyrassist">LyrAssist</a></li>
-</ul>
